[package]
name = "temp_test"
version = "0.1.1"
authors = ["Quadriphobs1 <abiodunquadriadekunle@gmail.com>"]
edition = "2018"
homepage = "https://github.com/Quadriphobs1/temp_test"
keywords = ["temp_test", "cli_test"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Quadriphobs1/temp_test"
description = "A library for temporary test utils for rust 🔨"
categories = ["command-line-utilities", "development-tools::testing", "development-tools"]
readme = "README.md"


[dependencies]
tempfile = "3.1.0"

[dev-dependencies]
clap = "3.0.0-beta.1"